# dmd

./: .gitignore  AGENTS.md  README.md  bacon.toml  install  install-arch  install-bin  install-crates  install-icons  install-paths  install.sh
data/: 90-uinput.rules  dependencies.txt  deps-aur.txt  deps-rust.txt  deps-web.txt  deps-zen-audio.txt  sudoers
dependencies/: aur.txt  cargo.txt
etc/: home_spec  kmd_template.hs
etc/devices/: headphones  monitors  speakers
etc/kmd/: 0base.hs  0base.kbd  audio.hs  audio.kbd  config.hs  launchers.kbd  lock.hs  mouse.hs  mouse.kbd  mux.kbd  scratch.hs  scratch.kbd  system.hs  system.kbd  terminal.hs  terminal.kbd  text.hs  text.kbd  window.hs  window.kbd
home/: .Xdefaults  .bashrc  .gitconfig  .iukenv  .profile  .xinitrc
home/.agents/: agents.md
home/.claude/: settings.json
home/.config/: .Xauthority  AGENTS.md  litexl-installer-plugins.txt  psprompt.toml  startup.sh  user-dirs.dirs
home/.ssh/: config
installation/: uninstall-lite-xl.sh
installation/data/: dependencies.txt  lite-xl.desktop  sudoers
iuk/: ABOUT  Cargo.toml
iuk/cli/: Cargo.toml
iuk/commander/: Cargo.toml
iuk/commander/src/: archiver.rs  audio.rs  home.rs  lib.rs  log.rs  mouse.rs  run_external.rs
iuk/src/: client.rs  main.rs  scratch.rs  server.rs
setup/: aur.txt  checkdiff.sh  crates.txt  dnf.txt  install-fonts  profile.dropin  sudoers.dropin  udev.rules  wayland.txt
src/: build-kmonad.sh  deps.txt  install.sh  sudoers
src/config/: devices  leds
src/scripts/: kmdrun.sh  micunmute.sh  mousewarp.sh  mute.sh  pa2pci.sh  unmute.sh  (+6 more)
(+184 files in other folders)
