[package]
name = "iuk"
description = "I Use Kmonad, BTW"
version = "0.1.0"
edition = "2021"
default-run = "iuk"

[[bin]]
name = "iuk"
path = "src/bin/cli.rs"

[[bin]]
name = "iukmessenger"
path = "src/bin/messenger.rs"

[[bin]]
name = "iukdaemon"
path = "src/bin/daemon.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.30", features = ["full"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
dbus-crossroads = "0.5.2"
futures = "0.3.28"
commander = { path = "../commander" }
