[package]
name = "commander"
description = "iuk commander"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.30", features = ["full"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
dbus-crossroads = "0.5.2"
futures = "0.3.28"
shellwords = "1.1.0"
chrono = "0.4.31"
